--- a/qrscout/styles.css
+++ b/qrscout/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --primary-color: #8861bc;
+  /* --secondary-color: #e8c9bc; */
+  --field-color: #c58e78;
+  --field-title: white;
+}
+
 body {
   background-color: black;
   color:white;
@@ -11,7 +18,7 @@ h1 {
 h2 {
   padding:1ex;
   margin:0;
-  background-color:blue;
+  background-color:var(--primary-color);
   color:white;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
@@ -21,11 +28,24 @@ h2 {
 h3 {
   padding:1ex;
   margin:0;
-  background-color:#303030;
-  color:white;
+  background-color:var(--field-color);
+  color:var(--field-title);
   font-variant-caps: small-caps;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
+}
+
+input[type='text'] {
+  background-color:transparent;
+  color:white;
+  border:none;
+  padding:.25rem .5rem;
+}
+
+select {
+  background-color:transparent;
+  color:white;
+  border:none;
 }
 
 #sections {
@@ -34,7 +54,7 @@ h3 {
 }
 
 .section {
-  border:1px solid blue;
+  border:1px solid var(--primary-color);
   margin-left: 1.5rem;
   margin-right: 0;
   border-radius: .5rem;
@@ -44,7 +64,7 @@ h3 {
   margin:.5rem;
   margin-bottom:1rem;
   text-align:center;
-  border:1px solid #303030;
+  border:1px solid var(--field-color);
   border-radius: .5rem;
 }
 
@@ -77,6 +97,7 @@ h3 {
 }
 
 .field input[type='checkbox'] {
+  margin:1rem;
   transform: scale(1.5);
   cursor:pointer;
 }
@@ -132,10 +153,10 @@ input[type=number] {
 }
 
 #buttons button {
-  border:1px solid blue;
+  border:1px solid var(--primary-color);
   border-radius: .25rem;
   color:white;
-  background-color:blue;
+  background-color:var(--primary-color);
   font-size: x-large;
   padding: 1ex 1em;
   cursor: pointer;
