Add copyright information to the QR Scout

--- a/src/main/resources/qrscout/styles.css
+++ b/src/main/resources/qrscout/styles.css
@@ -13,6 +13,11 @@ body {
   font-family:sans-serif;
 }
 
+#copyright {
+  text-align:center;
+  margin-top:2rem;
+}
+
 h1 {
   text-align:center;
   font-variant-caps:small-caps;
