--- a/src/main/resources/qrscout/styles.css
+++ b/src/main/resources/qrscout/styles.css
@@ -117,7 +117,7 @@ select {
   border-radius:.5rem;
 }
 
-.field {
+.field, .ec-field {
   margin:.5rem;
   margin-bottom:1rem;
   text-align:center;
