--- a/src/main/resources/qrscout/styles.css
+++ b/src/main/resources/qrscout/styles.css
@@ -11,7 +11,8 @@
 body {
   background-color:var(--background-color);
   color:var(--text-color);
-  font-family:sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
 }
 
 #copyright {
@@ -65,7 +66,7 @@ body {
 
 h1 {
   text-align:center;
-  font-variant-caps:small-caps;
+  font-weight: 400;
 }
 
 h2 {
@@ -75,7 +76,7 @@ h2 {
   color:var(--text-color);
   border-top-left-radius:.5rem;
   border-top-right-radius:.5rem;
-  font-variant-caps:small-caps;
+  font-weight: 400;
 }
 
 h3 {
